--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  @variants responsive, dark {
+    .error_eH {
+    }
+    .warnign_eH {
+
+    }
+  }
+}
