--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-image: linear-gradient(180deg, rgba(32, 255, 0, 0.53), rgba(255, 0, 0, 0) 150.71%),
+    linear-gradient(180deg, rgba(48, 255, 100, 0.16), rgba(51, 68, 63, 0.37) 80.71%),
+    linear-gradient(300deg, rgba(0, 0, 255, 0.76), rgba(0, 0, 255, 0) 190.71%);
 }
