--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply bg-cards-aqua-body min-h-screen;
+  }
+}
+
 @layer utilities {
   @variants responsive, dark {
     .error_eH {
@@ -17,24 +23,4 @@
       @apply text-green-900 bg-green-300;
     }
   }
-}
-
-@layer base {
-  /* .error_handler__item_transition-enter {
-    opacity: 0.2;
-    transform: translateX(350px);
-  }
-  .error_handler__item_transition-enter-active {
-    opacity: 1;
-    transform: translateX(0px);
-    transition: all 500ms ease-in;
-  }
-  .error_handler__item_transition-exit {
-    opacity: 0.5;
-  }
-  .error_handler__item_transition-exit-active {
-    opacity: 0;
-    transform: translateX(350px);
-    transition: all 500ms ease-out;
-  } */
 }
